--- a/assets/styles/subscribe.css
+++ b/assets/styles/subscribe.css
@@ -235,6 +235,14 @@ body {
         margin-top: 45%;
         padding-right: 0px;
     }
+
+    .item_link {
+        font-size: 1.2em;
+    }
+
+    .logo_text {
+        font-size: 1.3em;
+    }
 }
 /* Main Hero Wrapper and Heading Styles ---------------- */
 
